[project]
name = "strands"
version = "0.1.0"
description = "A simple AWS Strands Demo"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "yfinance>=0.2.18",
    "strands-agents",
    "strands-agents-tools",
    "langfuse>=2.0.0", 
    "reportlab",
    "matplotlib",
    "plotly"
]
